add change to subscribe, clean up code

--- a/preview.html
+++ b/preview.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" id="home" aria-current="page" href="index.html" target="_blank" rel="noopener">
+                            <a class="nav-link" id="home" aria-current="page" href="index.html">
                                 <i class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
@@ -36,7 +36,7 @@
                                 <i class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " id="subscribe" aria-current="page" href="subscribe.html" target="_blank" rel="noopener">
+                            <a class="nav-link " id="subscribe" aria-current="page" href="subscribe.html">
                                 <i class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
 
                         </li>
@@ -78,8 +78,7 @@
         to an already brilliant series.</p>
     <br>
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KfdSiRRUVSM" 
-            allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KfdSiRRUVSM" allowfullscreen></iframe>
     </div>
 
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
@@ -121,10 +120,14 @@
         play through. At the moment progress is pretty slow since I am in the world of ruin and I need to grind a lot to
         level
         up my characters before I can take on the tougher side stories and eventually the final boss! So progress is
-        unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit and I am still enjoying the ride
-        , considering that I missed this game when I was a kid and I didn't get into Final Fantasy until the release of FF7! it's been interesting
-        to play something that has been in my backlog for way too long now, I attempted to play the Playstation One release of FF6(it came with a demo of FFX!)
-        but for some reason my copy of the game had a weird glitch in it which cut the game dead just after you meet Sabin when you fight Vargis, for some reason
+        unfortunately slow since grinding can be a painfully slow process but I'm getting there bit by bit and I am
+        still enjoying the ride
+        , considering that I missed this game when I was a kid and I didn't get into Final Fantasy until the release of
+        FF7! it's been interesting
+        to play something that has been in my backlog for way too long now, I attempted to play the Playstation One
+        release of FF6(it came with a demo of FFX!)
+        but for some reason my copy of the game had a weird glitch in it which cut the game dead just after you meet
+        Sabin when you fight Vargis, for some reason
         the Blitz button combination never worked!! So I couldn't finish the fight.</p>
     <br>
     <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
@@ -142,11 +145,14 @@
         using up
         their own health points instead of magic points to use attack magic or heal their comrades, There is also no
         currency
-        system and a few other oddities! Even with all of these changes it still plays well and is a pretty decent strategy game
-        but since I have knowledge of the later games in the series this still feels very much like a prototype instead of a fully
-        formed piece of work, it is still an interesting game to look back on but it is a shame that I can't follow the story at all! 
-        I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies. 
-         I'll be writing an article on this fantastic SRPG in the near future.</p>
+        system and a few other oddities! Even with all of these changes it still plays well and is a pretty decent
+        strategy game
+        but since I have knowledge of the later games in the series this still feels very much like a prototype instead
+        of a fully
+        formed piece of work, it is still an interesting game to look back on but it is a shame that I can't follow the
+        story at all!
+        I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies.
+        I'll be writing an article on this fantastic SRPG in the near future.</p>
     <br>
     <h6 class="h6">Harmful Park - Playstation One</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
