--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                                     class="fa-solid fa-ghost " style="color: #f61313;"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="preview" aria-current="page" href="preview.html" target="_blank" rel="noopener"><i
+                            <a class="nav-link" id="preview" aria-current="page" href="preview.html"><i
                                     class="fa-solid fa-ghost " style="color: #06f8f4;"></i>Preview</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="subscribe" aria-current="page" href="subscribe.html" target="_blank" rel="noopener"><i
+                            <a class="nav-link" id="subscribe" aria-current="page" href="subscribe.html"><i
                                     class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
 
                         </li>
