--- a/preview.html
+++ b/preview.html
@@ -4,16 +4,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Oni Neko Gamer</title>
-</head>
+    <style>
+        @media only screen and (min-width: 600px) {
+            .col-sm-2 {
+                background: #61777F;
+            }
+        }
 
+        @media only screen and (min-width: 768px) {
+
+            .col-md-2 {
+                background: #61777F;
+            }
+
+        }
+    </style>
+</head>
 <body>
     <header>
         <!-- Navbar -->
@@ -80,13 +97,10 @@
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KfdSiRRUVSM" allowfullscreen></iframe>
     </div>
-
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
-    <!--image here-->
     <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
     <h6 class="h6">Date Reviewed - 06/06/2022</h6><br>
     <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
-
     <br>
     <p class="text-break">I want to go more into the fighting as that is what you will be doing for most of your time
         in this game, it feels
@@ -219,6 +233,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
+            <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
         </div>
         <!-- Copyright -->
 
