add change to footer element, added readme.md

--- a/preview.html
+++ b/preview.html
@@ -100,7 +100,7 @@
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
     <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
     <h6 class="h6">Date Reviewed - 06/06/2022</h6><br>
-    <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail">
+    <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail-right">
     <br>
     <p class="text-break">I want to go more into the fighting as that is what you will be doing for most of your time
         in this game, it feels
@@ -234,6 +234,8 @@
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
+            <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+                <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
 
