add change to image alignment

--- a/preview.html
+++ b/preview.html
@@ -146,7 +146,7 @@
     <br>
     <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail">
+    <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail-right">
 
     <p class="text-break">I've recently purchased a copy of this fantastic early Fire Emblem title, The vintage does
         show
@@ -186,7 +186,7 @@
     <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
     <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail">
+    <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail-right">
     <p class="text-break">This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a
         pretty terrible
         pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's an exciting
