add changes to style.css, preview

--- a/preview.html
+++ b/preview.html
@@ -31,6 +31,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <!-- Navbar -->
@@ -73,7 +74,7 @@
     <h1 class="h1"> A preview of my work</h1>
     <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2>
     <h6 class="h6"> Date Reviewed - 26/05/21</h6><br>
-    <img src="../assets/images/sfexa.jpg" id="sfexa" class="image-thumbnail">
+    <img src="../assets/images/sfexa.jpg" id="sfexa" alt="street fighter ex box art" class="image-thumbnail">
     <!--https://linuxhint.com/align-image-right-css/-->
     <p class="text-break">The graphics are nothing special nowadays but they still hold up and have moments of charm
         and character to them, the
@@ -100,7 +101,8 @@
     <h2 class="h2">Fist Of The North Star - Lost Paradise</h2>
     <h6 class="h6">Available on - Xbox One and P.C - reviewed on Playstation 4</h6>
     <h6 class="h6">Date Reviewed - 06/06/2022</h6><br>
-    <img src="../assets/images/fotnlp box.jpg" id="fotnlp" class="image-thumbnail-right">
+    <img src="../assets/images/fotnlp box.jpg" id="fotnlp" alt="fist of the north star box art"
+        class="image-thumbnail-right">
     <br>
     <p class="text-break">I want to go more into the fighting as that is what you will be doing for most of your time
         in this game, it feels
@@ -128,7 +130,7 @@
         enjoy the game enough.</h6><br>
     <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/ff6 box art.jfif" id="ff6" class="image-thumbnail">
+    <img src="../assets/images/ff6 box art.jfif" id="ff6" alt="final fantasy 6 box art" class="image-thumbnail">
     <p class="text-break">I'm still playing through the amazing Final Fantasy 6 and working my way towards the end
         whilst writing the rest of my
         play through. At the moment progress is pretty slow since I am in the world of ruin and I need to grind a lot to
@@ -146,7 +148,7 @@
     <br>
     <h6 class="h6">Fire Emblem Gaiden - Nintendo Famicom</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/ffg box.jfif" id="ffg" class="image-thumbnail-right">
+    <img src="../assets/images/ffg box.jfif" id="ffg" alt="fire emblem gaiden box art" class="image-thumbnail-right">
 
     <p class="text-break">I've recently purchased a copy of this fantastic early Fire Emblem title, The vintage does
         show
@@ -170,7 +172,7 @@
     <br>
     <h6 class="h6">Harmful Park - Playstation One</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/hp box.jfif" id="hp" class="image-thumbnail">
+    <img src="../assets/images/hp box.jfif" id="hp" alt="Harmful Park box art" class="image-thumbnail">
     <p class="text-break">Yet Another import Japanese exclusive and one I sadly don't own a physical copy of but I
         instead saved hundreds of
         pounds and bought it from the Japanese PSN store, It's a really fun game that reminds me of the Konami classic
@@ -186,7 +188,7 @@
     <h6 class="h6">Konami Anniversary Collection Arcade Classics - Played on Playstation 4</h6>
     <h6 class="h6">Also available on the Nintendo Switch, Xbox One and P.C.</h6>
     <h6 class="h6">Date Reviewed - 06/02/2022</h6><br>
-    <img src="../assets/images/konami box.jfif" id="konami" class="image-thumbnail-right">
+    <img src="../assets/images/konami box.jfif" id="konami" alt="Konami arcade box art" class="image-thumbnail-right">
     <p class="text-break">This compilation is full of classic Konami arcade Shmup's plus Haunted Castle .... which is a
         pretty terrible
         pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's an exciting
@@ -210,7 +212,7 @@
     <!--image here-->
     <h6 class="h6"> Available on Sega Saturn and Playstation. Remake available for the Wii and Playstation 2</h6>
     <h6 class="h6">Date Reviewed - 31/10/2022</h6><br>
-    <img src="../assets/images/baroque box.jfif" id="baroque" class="image-thumbnail">
+    <img src="../assets/images/baroque box.jfif" id="baroque" alt="Baroque box art" class="image-thumbnail">
     <p class="text-break">Baroque is a truly unique experience with wonderful world building and a host of strange
         characters all with their own
         troubles and histories. I've been playing the Japanese original release of this game and my Japanese is nowhere
@@ -234,7 +236,8 @@
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-            <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+            <a class="github-socials" target="_blank"
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
                 <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
