add changes to index.html to change text/spelling errors

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
             beginning of the global pandemic as a way to take my mind away from what was happening around the world and
             to sharpen my writing skills whilst
-            writing about something that I love doing, playing video games! I deided to start a blog on Wordpress since
-            it as an
+            writing about something that I love doing, playing video games! I decided to start a blog on Wordpress since
+            it was an
             easy to use development tool for new and veteran coders a like, after examining the code on my work it
             sparked my interest in learning how
             to do it for myself! I am currently undertaking a Level 5 Diploma in Fullstack Web Development and with my
@@ -100,7 +100,7 @@
             games that some
             people may never have heard of even with the internet at the their fingertips. One of my favourite times of
             the year is
-            Halloween, so I tend to write about survival horror or just horror themed titles for the occasion with
+            Halloween, as I tend to write about survival horror or just horror themed titles for the occasion with
             previous titles
             being Getsuu Fuma Den, Baroque and Kid Dracula which are all different styles of horror themed games but
             just as appropriate
@@ -114,11 +114,11 @@
             vs con's list at the bottom
             I have always found that scoring based review systems are a bit redundant and with great writing you should
             be able to describe how good
-            something is without relying no numbers to do the work for you!
+            something is without relying on numbers to do the work for you!
         </p>
         <p class="text-break"> I think that if you are into gaming, especially the niche side of the hobby then there
             will be a ton of things
-            for even the most veteran of gamers to sink their teeth into. I always enjoy reading comments from the
+            for even the most hardcore of gamers to sink their teeth into. I always enjoy reading comments from the
             fantastic but small fan
             base that I have built up over the past few years, as the readers are just as passionate about the topic as
             I am! It is slowly turning
