add changes to form/ subscribe btn by including JS

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
     </header>
         <section>
-            <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
+            <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </section>
         </div>
         </div>
@@ -133,7 +133,7 @@
             can share it with the community, because that is what we are all about at Oni Neko Gamer.
         </p>
         <section>
-            <img src="../assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
+            <img src="assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
         </section>
 
     </section>
