--- a/subscribe.html
+++ b/subscribe.html
@@ -29,8 +29,9 @@
             }
 
         }
-        </style>
+    </style>
 </head>
+
 <body>
     <header>
         <!-- Navbar -->
@@ -63,7 +64,7 @@
     </header>
     <section id="logo-section">
         <div>
-            <img src="../assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
+            <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
         </div>
     </section>
     <section id="form-section">
@@ -118,7 +119,8 @@
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-            <a class="github-socials" target="_blank" href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+            <a class="github-socials" target="_blank"
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
                 <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
@@ -127,31 +129,49 @@
     <script>
         // Get the modal
         var modal = document.getElementById("myModal");
-
-        // Get the button that opens the modal
-        var btn = document.getElementById("myBtn");
-
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks the button, open the modal 
-        btn.onclick = function () {
-            modal.style.display = "block";
-        };
-
         // When the user clicks on <span> (x), close the modal
         span.onclick = function () {
             modal.style.display = "none";
         };
-
         // When the user clicks anywhere outside of the modal, close it
         window.onclick = function (event) {
             if (event.target == modal) {
                 modal.style.display = "none";
             }
-        }
+        };
+
+        //click function for button// //written by my mentor Benjamin Kavanaugh//
+        document.getElementById("myBtn").onclick = function (event) {
+            let allAreFilled = true;
+            document.getElementById("subscribe-form").querySelectorAll("[required]").forEach(function (i) {
+                if (!allAreFilled) {
+                    document.getElementById("subscribe-form").reportValidity();
+                    return;
+                }
+                if (!i.value) {
+                    allAreFilled = false;
+                    document.getElementById("subscribe-form").reportValidity();
+                    return;
+                }
+            });
+            if (allAreFilled) {
+                document.getElementById("subscribe-form").reset();
+                modal.style.display = "block";
+            }
+            return false;
+        };
+
+
+
+
+
+
+
+
     </script>
-    
+
 </body>
 
 </html>
