--- a/preview.html
+++ b/preview.html
@@ -230,12 +230,14 @@
 
         <footer class=" bg-light text-center text-lg-start">
         <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
-            © 2023 Copyright: Oni Neko Gamer
-            <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-            <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
-                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+<footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+        © 2023 Copyright: Oni Neko Gamer
+        <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
+        <a class="github-socials" target="_blank"
+            href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+            <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
