--- a/index.html
+++ b/index.html
@@ -47,21 +47,15 @@
                         <li class="nav-item">
                             <a class="nav-link" id="subscribe" aria-current="page" href="subscribe.html"><i
                                     class="fa-solid fa-ghost " style="color: #ff97d0;"></i>Subscribe</a>
-
                         </li>
-                    </ul>
-                    </li>
                     </ul>
                 </div>
             </div>
-        </nav>
         </nav>
     </header>
     <section>
         <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
     </section>
-    </div>
-    </div>
     <h1 class="h1"> Why I love writing </h1>
     <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
         beginning of the global pandemic as a way to take my mind away from what was happening around the world and
@@ -118,22 +112,20 @@
         can share it with the community, because that is what we are all about at Oni Neko Gamer.
     </p>
     <section>
-        <img src="assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi" </div>
+        <img src="assets/images/akai-ddp.jpg" class="img-fluid" alt="image of akai katana and dodonpachi">
     </section>
 
-    </section>
     <footer class="bg-light text-center text-lg-start">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
-                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
+            <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
-
-    </footer>
+   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
