--- a/preview.html
+++ b/preview.html
@@ -222,13 +222,13 @@
         © 2023 Copyright: Oni Neko Gamer
         <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
         <a class="github-socials" target="_blank"
-            href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+            href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
             <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
-        
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
-</body>
+        </body>
 
 </html>
