--- a/subscribe.html
+++ b/subscribe.html
@@ -54,7 +54,7 @@
     </section>
     <section id="form-section">
         <!--https://blog.hubspot.com/website/html-text-box-->
-        <div class="form bg-image opacity-50" style="background-image: url('../assets/images/medleygames1.jpg');
+        <div class="form bg-image opacity-50" style="background-image: url('assets/images/medleygames1.jpg');
                     height:100%;">
             <form id="subscribe-form">
                 <div class="form-row">
