change error in footer

--- a/preview.html
+++ b/preview.html
@@ -53,15 +53,15 @@
     <div>
         <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
     </div>
+    <div class="container">
+    <div class="preview-text-1">
     <h1 class="h1"> A preview of my work</h1>
     <h2 class="h2"> Street Fighter EX Plus Alpha - playstation one</h2>
     <h6 class="h6"> Date Reviewed - 26/05/21</h6><br>
-    <div class="container">
-            <div class="col-4">
-            <img src="assets/images/sfexa.jpg" id="sfexa" alt="street fighter ex box art" class="image-thumbnail">
-            </div>
+    
+            <img src="assets/images/sfexa.jpg" id="sfexa" alt="street fighter ex box art" class="img-fluid">
             <!--https://linuxhint.com/align-image-right-css/-->
-                <div class="col-8">
+                
                     <p>The graphics are nothing special nowadays but they still hold up and have moments of charm
                         and character to them, the
                         backgrounds are all pretty interesting and they manage to look better than some of the character
@@ -88,6 +88,7 @@
                         spin off
                         to an already brilliant series.</p>
                 </div>
+            </div>
             </div>
             <br>
             <div class="embed-responsive embed-responsive-16by9">
@@ -283,7 +284,7 @@
                         © 2023 Copyright: Oni Neko Gamer
                         <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
                         <a class="github-socials" target="_blank"
-                            href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
+                            href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
                         <i class="fa-brands fa-github" style="color:#61777f;"></i>
                     </div>
                 </footer>
