--- a/subscribe.html
+++ b/subscribe.html
@@ -105,7 +105,7 @@
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
                 <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
