add change to navbar

--- a/preview.html
+++ b/preview.html
@@ -19,6 +19,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
+                <img src="assets/images/favicon-color.png" class="favicon"></img>
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -45,7 +46,7 @@
             </div>
         </nav>
     </header>
-    <div class="container logo">
+    <div class="container logo justify-content-center align-items-center d-flex">
         <img src="assets/images/logo2.png" id="logo" alt="oni neko gamer logo">
     </div>
     <section class="container">
@@ -357,7 +358,7 @@
             </div>
     </section>
     <section class="container">
-        <img src="assets/images/arcade stick.jpg" class="arcade"
+        <img src="assets/images/arcade-stick.jpg" class="arcade"
             alt="An image of an arcade stick with games on top of it">
     </section>
     
