--- a/subscribe.html
+++ b/subscribe.html
@@ -22,6 +22,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
+                <img src="assets/images/favicon-color.png" class="favicon"></img>
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
