add new ff6 image, miscelanious changes

--- a/preview.html
+++ b/preview.html
@@ -161,11 +161,11 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-4 col-12">
-                <img src="assets/images/ff6 box art.jfif" id="ff6" alt="final fantasy 6 box art"
+                <img src="assets/images/ff6-box.jfif" id="ff6" alt="final fantasy 6 box art"
                     class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
-                <p class="text-break">I'm still playing through the amazing Final Fantasy 6 and working my way towards
+                <p class="ff6-p">I'm still playing through the amazing Final Fantasy 6 and working my way towards
                     the
                     end
                     whilst writing the rest of my
