--- a/index.html
+++ b/index.html
@@ -18,12 +18,7 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-sm-1"> </div>
-        <div class="col-md-1"> </div>
-        <div class="col-lg-1"> </div>
-        <div class="col-xl-1"> </div>
-    </div>
+
     <header>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -60,7 +55,7 @@
     <section>
         <div class="main-page">
             <h1 class="h1"> Why I love writing </h1>
-            <p class="text-break"> I have been writing as Oni Neko Gamer for around three years, I began writing at the
+            <p> I have been writing as Oni Neko Gamer for around three years, I began writing at the
                 beginning of the global pandemic as a way to take my mind away from what was happening around the world
                 and
                 to sharpen my writing skills whilst
@@ -82,7 +77,7 @@
                 as what I am playing currently and retrospectives on whole game series. Gaming is a passion for me and
                 something that I don't think that I will ever grow tired off.
             </p>
-            <p class="text-break">I like to think that I write about games that have been forgotten or just ignored by
+            <p>I like to think that I write about games that have been forgotten or just ignored by
                 other
                 gamers due
                 to the issues of playing a game in a foreign language but this leads to why I do it! I love highlighting
@@ -109,7 +104,7 @@
                 be able to describe how good
                 something is without relying on numbers to do the work for you!
             </p>
-            <p class="text-break"> I think that if you are into gaming, especially the niche side of the hobby then
+            <p> I think that if you are into gaming, especially the niche side of the hobby then
                 there
                 will be a ton of things
                 for even the most hardcore of gamers to sink their teeth into. I always enjoy reading comments from the
