--- a/subscribe.html
+++ b/subscribe.html
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <footer class=" bg-light text-center text-lg-start">
+    <footer class="bg-light text-center text-lg-start" id="footer">
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
             © 2023 Copyright: Oni Neko Gamer
