add change to preview text and images

--- a/preview.html
+++ b/preview.html
@@ -109,7 +109,7 @@
                 <h6 class="h6">Date Reviewed - 06/06/2022</h6>
             </div>
             <div class="col-md-8 col-12">
-                <p class="text-break">I want to go more into the fighting as that is what you will be doing for most of
+                <p>I want to go more into the fighting as that is what you will be doing for most of
                     your
                     time
                     in this game, it feels
@@ -144,7 +144,7 @@
                     know is
                     that you can find a Sega SG-1000 and that's pretty rad.</p>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/fotnlp box.jpg" id="fotnlp" alt="fist of the north star box art" class="image-thumbnail-right">
             </div>
         </div>
@@ -160,7 +160,7 @@
                 <h6 class="h6"> Final Fantasy 6 - Super Nintendo</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/ff6-box.jfif" id="ff6" alt="final fantasy 6 box art"
                     class="image-thumbnail">
             </div>
@@ -201,7 +201,7 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-8 col-12">
-            <p class="text-break">I've recently purchased a copy of this fantastic early Fire Emblem title, The
+            <p>I've recently purchased a copy of this fantastic early Fire Emblem title, The
                 vintage
                 does
                 show
@@ -234,7 +234,7 @@
                 I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies.
                 I'll be writing an article on this fantastic SRPG in the near future.</p>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/ffg box.jfif" id="ffg" alt="fire emblem gaiden box art" class="image-thumbnail-right">
             </div>
         </div>
@@ -245,11 +245,11 @@
                 <h6 class="h6">Harmful Park - Playstation One</h6>
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/hp box.jfif" id="hp" alt="Harmful Park box art" class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
-                <p class="text-break">Yet Another import Japanese exclusive and one I sadly don't own a physical copy of
+                <p>Yet Another import Japanese exclusive and one I sadly don't own a physical copy of
                     but
                     Iinstead saved hundreds of
                     pounds and bought it from the Japanese PSN store, It's a really fun game that reminds me of the
@@ -279,7 +279,7 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-8 col-12">
-                <p class="text-break">This compilation is full of classic Konami arcade Shmup's plus Haunted Castle ....
+                <p>This compilation is full of classic Konami arcade Shmup's plus Haunted Castle ....
                     which is a
                     pretty terrible
                     pseudo- prototype for Castlevania, it's pretty interesting to play, as a huge Castlevania fan it's
@@ -310,7 +310,7 @@
                     playing
                     it.</p>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/konami box.jfif" id="konami" alt="Konami arcade box art" class="image-thumbnail-right">
             </div>
         </div>
@@ -323,11 +323,11 @@
                 </h6>
                 <h6 class="h6">Date Reviewed - 31/10/2022</h6>
             </div>
-            <div class="col-md-4 col-12">
+            <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
                 <img src="assets/images/baroque box.jfif" id="baroque" alt="Baroque box art" class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
-                <p class="text-break">Baroque is a truly unique experience with wonderful world building and a host of
+                <p>Baroque is a truly unique experience with wonderful world building and a host of
                     strange
                     characters all with their own
                     troubles and histories. I've been playing the Japanese original release of this game and my Japanese
