add changes to preview

--- a/preview.html
+++ b/preview.html
@@ -145,7 +145,8 @@
                     that you can find a Sega SG-1000 and that's pretty rad.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/fotnlp box.jpg" id="fotnlp" alt="fist of the north star box art" class="image-thumbnail-right">
+                <img src="assets/images/fotnlp box.jpg" id="fotnlp" alt="fist of the north star box art"
+                    class="image-thumbnail-right">
             </div>
         </div>
     </section>
@@ -161,8 +162,7 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/ff6-box.jfif" id="ff6" alt="final fantasy 6 box art"
-                    class="image-thumbnail">
+                <img src="assets/images/ff6-box.jfif" id="ff6" alt="final fantasy 6 box art" class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
                 <p class="ff6-p">I'm still playing through the amazing Final Fantasy 6 and working my way towards
@@ -201,41 +201,42 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-8 col-12">
-            <p>I've recently purchased a copy of this fantastic early Fire Emblem title, The
-                vintage
-                does
-                show
-                a bit within the game but
-                it is mostly small things that are missing such as a visual grid on the battlefield instead you have
-                to
-                check
-                your
-                enemies and allies move and attack ranges yourself and plan accordingly. The other changes in this
-                early
-                title
-                are
-                pretty big departures from future games such as Archers being able to attack at point blank range
-                and
-                mages
-                using up
-                their own health points instead of magic points to use attack magic or heal their comrades, There is
-                also no
-                currency
-                system and a few other oddities! Even with all of these changes it still plays well and is a pretty
-                decent
-                strategy game
-                but since I have knowledge of the later games in the series this still feels very much like a
-                prototype
-                instead
-                of a fully
-                formed piece of work, it is still an interesting game to look back on but it is a shame that I can't
-                follow the
-                story at all!
-                I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies.
-                I'll be writing an article on this fantastic SRPG in the near future.</p>
+                <p>I've recently purchased a copy of this fantastic early Fire Emblem title, The
+                    vintage
+                    does
+                    show
+                    a bit within the game but
+                    it is mostly small things that are missing such as a visual grid on the battlefield instead you have
+                    to
+                    check
+                    your
+                    enemies and allies move and attack ranges yourself and plan accordingly. The other changes in this
+                    early
+                    title
+                    are
+                    pretty big departures from future games such as Archers being able to attack at point blank range
+                    and
+                    mages
+                    using up
+                    their own health points instead of magic points to use attack magic or heal their comrades, There is
+                    also no
+                    currency
+                    system and a few other oddities! Even with all of these changes it still plays well and is a pretty
+                    decent
+                    strategy game
+                    but since I have knowledge of the later games in the series this still feels very much like a
+                    prototype
+                    instead
+                    of a fully
+                    formed piece of work, it is still an interesting game to look back on but it is a shame that I can't
+                    follow the
+                    story at all!
+                    I'm pretty sure it'd be interesting and I'd like to see why I'm fighting certain enemies.
+                    I'll be writing an article on this fantastic SRPG in the near future.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/ffg box.jfif" id="ffg" alt="fire emblem gaiden box art" class="image-thumbnail-right">
+                <img src="assets/images/ffg box.jfif" id="ffg" alt="fire emblem gaiden box art"
+                    class="image-thumbnail-right">
             </div>
         </div>
     </section>
@@ -311,7 +312,8 @@
                     it.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/konami box.jfif" id="konami" alt="Konami arcade box art" class="image-thumbnail-right">
+                <img src="assets/images/konami box.jfif" id="konami" alt="Konami arcade box art"
+                    class="image-thumbnail-right">
             </div>
         </div>
     </section>
@@ -355,27 +357,27 @@
                     between
                     them is that the remake isn't in first person unlike the Playstation one and Saturn original.</p>
             </div>
-            </div>
+        </div>
     </section>
     <section class="container">
         <img src="assets/images/arcade-stick.jpg" class="arcade"
             alt="An image of an arcade stick with games on top of it">
     </section>
-    
-        <footer class="bg-light text-center text-lg-start">
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
-                © 2023 Copyright: Oni Neko Gamer
-                <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
-                <a class="github-socials" target="_blank"
-                    href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
-                    <i class="fa-brands fa-github" style="color:#61777f;"></i>
-            </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
+
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgb(250, 250, 3);">
+            © 2023 Copyright: Oni Neko Gamer
+            <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
+            <a class="github-socials" target="_blank"
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
+                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
