add change to height of suggestion boxto debug issue on subscribe page

--- a/subscribe.html
+++ b/subscribe.html
@@ -14,7 +14,7 @@
         integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3ff9196d34.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Oni Neko Gamer</title>   
+    <title>Oni Neko Gamer</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="assets/images/favicon-color.png" class="favicon"></img>
+                <img src="assets/images/favicon-color.png" class="favicon">
                 <a class="navbar-brand" href="index.html">Oni Neko Gamer</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -106,8 +106,8 @@
             © 2023 Copyright: Oni Neko Gamer
             <a href="mailto:alexanstey44@gmail.com">alexanstey44@gmail.com</a>
             <a class="github-socials" target="_blank"
-                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer">
-                <i class="fa-brands fa-github" style="color:#61777f;"></i>
+                href="https://github.com/Aansteydev/Milestone-Project-1-oni-neko-gamer"></a>
+            <i class="fa-brands fa-github" style="color:#61777f;"></i>
         </div>
         <!-- Copyright -->
 
@@ -148,7 +148,7 @@
             }
             return false;
         };
-</script>
+    </script>
 </body>
 
 </html>
