add minor changes to image names and css

--- a/preview.html
+++ b/preview.html
@@ -145,7 +145,7 @@
                     that you can find a Sega SG-1000 and that's pretty rad.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/fotnlp box.jpg" id="fotnlp" alt="fist of the north star box art"
+                <img src="assets/images/fotnlp-box.jpg" id="fotnlp" alt="fist of the north star box art"
                     class="image-thumbnail-right">
             </div>
         </div>
@@ -235,7 +235,7 @@
                     I'll be writing an article on this fantastic SRPG in the near future.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/ffg box.jfif" id="ffg" alt="fire emblem gaiden box art"
+                <img src="assets/images/ffg-box.jfif" id="ffg" alt="fire emblem gaiden box art"
                     class="image-thumbnail-right">
             </div>
         </div>
@@ -247,7 +247,7 @@
                 <h6 class="h6">Date Reviewed - 06/02/2022</h6>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/hp box.jfif" id="hp" alt="Harmful Park box art" class="image-thumbnail">
+                <img src="assets/images/hp-box.jfif" id="hp" alt="Harmful Park box art" class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
                 <p>Yet Another import Japanese exclusive and one I sadly don't own a physical copy of
@@ -312,7 +312,7 @@
                     it.</p>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/konami box.jfif" id="konami" alt="Konami arcade box art"
+                <img src="assets/images/konami-box.jfif" id="konami" alt="Konami arcade box art"
                     class="image-thumbnail-right">
             </div>
         </div>
@@ -326,7 +326,7 @@
                 <h6 class="h6">Date Reviewed - 31/10/2022</h6>
             </div>
             <div class="col-md-4 col-12 justify-content-center align-items-center d-flex">
-                <img src="assets/images/baroque box.jfif" id="baroque" alt="Baroque box art" class="image-thumbnail">
+                <img src="assets/images/baroque-box.jfif" id="baroque" alt="Baroque box art" class="image-thumbnail">
             </div>
             <div class="col-md-8 col-12">
                 <p>Baroque is a truly unique experience with wonderful world building and a host of
